--- a/style.css
+++ b/style.css
@@ -63,5 +63,9 @@ body {
         border-radius: 0 40px 0 0;
     }
 }
-
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+    }
+    
 
