--- a/style.css
+++ b/style.css
@@ -7,11 +7,14 @@
     --botao-ativo: #857dd8;
     --botao-inativo: rgba(21, 0, 255, 0.397);
   --texto-fundo: rgba(21, 0, 255, 0.3);
+
+  .titulo-principal {
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
 }
-padding: 0 16px;
-text-align: center;
-min-width: 100px;
-} 
+
+
 body {
    background-color: var(--cor-de-fundo);
    color: var(--branco);
@@ -119,14 +122,14 @@ margin: 0;
 @media screen and (min-width: 768px) {
 .botoes {
    display: flex;
-}
+ }
 
 .botao:first-child {
    border-radius: 40px 0 0 0;
-}
+ }
 
 .botao:last-child {
   border-radius: 0 40px 0 0;
-}
+ }
 }
 
