--- a/style.css
+++ b/style.css
@@ -1,20 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap&#39;);
+@import url('https://fonts.googleapis.com/css2?family-Chakra+Petch:w ght@400:700&display=swap'); 
 
-  :root {
-     --cor-de-fundo: #ffffff;
-     --verde: #002fff;
-     --branco: #000000;
-     --botao-ativo: #857dd8;
-     --botao-inativo: rgba(21, 0, 255, 0.397);
-  --texto-fundo: rgba(21, 0, 255, 0.3);
-
-  }
-  .titulo-principal {
-    text-align: left;
-    width: 100%;
-    font-size: 32px;
-}
-
+:root {
+      --cor-de-fundo: #1E1E1E;
+      --verde: #6FFF57;
+      --branco: #FFFFFF;
+      --botao-ativo: #3A375E;
+      --texto-fundo: rgba(21, 0, 255, 0.3);
+ }
+  
 
 body {
    background-color: var(--cor-de-fundo);
