--- a/style.css
+++ b/style.css
@@ -126,3 +126,86 @@ margin: 0;
   border-radius: 0 40px 0 0;
    }
   }
+  .parametro{
+    background-color: var(--fundo-texto);
+    border: 2px solid var(--borda);
+    margin-top: 32px;
+    padding: 24px;
+}
+.parametro-titulo{
+  font-family: var(--roboto-mono);
+  font-size: 28px;
+}
+.parametro-senha__titulo{
+  font-size:24px;
+}
+.parametro-coluna__senha{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#campo-senha{
+  background-color: var(--fundo-senha);
+  border: none;
+  color: var(--branco);
+  font-family: var(--roboto-mono);
+  font-size: 40px;
+  width: 70%;
+}
+@media screen and (min-width: 768px) {
+  .parametro-coluna__senha{
+      flex-direction: row;
+  }
+}
+.parametro-senha{
+  width: 50%;
+  margin: 0 auto;
+}
+
+
+.parametro-senha__botao{
+    background-color: var(--fundo-texto);
+    color: var(--branco);
+    border: 2px solid var(--borda);
+    padding: 24px;
+    font-size: 24px;
+    cursor: pointer;
+   
+}
+
+.parametro-senha__texto{
+    padding: 24px;
+    border-top: 2px solid var(--borda);
+    border-bottom: 2px solid var(--borda);
+    margin: 0;
+    font-size: 24px;
+}
+.checkbox{
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+.barra{
+  background-color: var(--fundo-senha);
+  height: 30px;
+  width: 100%;
+}
+.forca{
+  height: 30px;
+  position: relative;
+  bottom: 30px;
+}
+.fraca{
+  width: 25%;
+  background-color: #E71B32; 
+}
+.media{
+  background-color: #FAF408;
+  width: 50%;
+}
+.forte{
+  background-color: #00FF85;
+  width: 100%;
+}
+
+
